--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-/*body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-}
 
+/*
 .container {
     width: 80%;
     background: white;
@@ -47,7 +40,7 @@
 
 .app-name {
     font-family: 'Press Start 2P', cursive;
-    font-size: 2em;
+    font-size: 1em;
     font-weight: bold;
     background-image: linear-gradient(to right, rgb(176 100 0), #ffdaaa, rgb(85 140 100)); 
     background-clip: text; 
