--- a/src/app/componentes/toast/toast.component.css
+++ b/src/app/componentes/toast/toast.component.css
@@ -6,6 +6,7 @@
     right: 10px;
     z-index: 1050;
     gap: 5px;
+    padding-left: 10px;
   }
   
   .toast {
@@ -17,5 +18,7 @@
     position: absolute;
     top: 5px;
     right: 10px;
+    font-size: 0.6rem; 
+    color: white;
   }
   
