--- a/src/app/componentes/lancamento/lancamento.component.html
+++ b/src/app/componentes/lancamento/lancamento.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container-fluid mt-4">
     <h2 class="mb-4 titulo_tela">Lançamento de Gastos</h2>
   
     <form [formGroup]="lancamentoForm" (ngSubmit)="salvarLancamento()">
