--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="lancamento">Lançamento</a></li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Lançamentos
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" routerLink="lancamento">Inclusão</a></li>
+                        <li><a class="dropdown-item" routerLink="consulta-lancamento">Consultar</a></li>
+                      </ul>
+                    </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Referências
