--- a/src/app/componentes/lancamento/consulta-lancamento/consulta-lancamento.component.html
+++ b/src/app/componentes/lancamento/consulta-lancamento/consulta-lancamento.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container-fluid mt-4">
   <h2>Lançamentos</h2>
 
   <form [formGroup]="filtrosForm" (ngSubmit)="filtrarLancamentos()">
